# GlideFrameSequenceIntegration

./: .gitignore  CHANGLE_LOG.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/xyz/yorek/glide/framesequence/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/lottie/: 103192-pandarian.json
app/src/main/java/xyz/yorek/glide/framesequence/: ConstraintLayoutActivity.java  ImageAdapter.java  LottieActivity.java  MainActivity.java  NetworkImageActivity.java  SampleAppModule.java  SampleListActivity.java
app/src/main/res/drawable/: dot_dot_dot.xml  image_error.xml  image_loading.xml
app/src/main/res/layout/: activity_cl.xml  activity_lottie.xml  activity_main.xml  activity_sample_list.xml  recycler_item_cl.xml  recycler_item_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/xyz/yorek/glide/framesequence/: ExampleUnitTest.java
framesequence/: build.gradle  consumer-rules.pro
framesequence/src/androidTest/java/xyz/yorek/glide/framesequence/: ExampleInstrumentedTest.java
framesequence/src/main/: AndroidManifest.xml
framesequence/src/main/490/xyz/yorek/glide/module/: FrameSequenceGlideExtension.java
framesequence/src/main/cpp/: CMakeLists.txt
framesequence/src/main/cpp/framesequence/: BitmapDecoderJNI.cpp  Color.h  FrameSequence.cpp  FrameSequence.h  FrameSequenceJNI.cpp  FrameSequenceJNI.h  FrameSequence_gif.cpp  FrameSequence_gif.h  FrameSequence_webp.cpp  FrameSequence_webp.h  JNIHelpers.cpp  JNIHelpers.h  Registry.cpp  Registry.h  Stream.cpp  Stream.h
framesequence/src/main/cpp/framesequence/utils/: log.h  math.h
framesequence/src/main/cpp/giflib/: config.h
framesequence/src/main/cpp/webp/: CMakeLists.txt
framesequence/src/main/java/xyz/yorek/glide/: AnimatedWebpHeaderParser.java
framesequence/src/main/java/xyz/yorek/glide/decoder/: ByteBufferFrameSequenceDecoder.java  StreamFrameSequenceDecoder.java
framesequence/src/main/java/xyz/yorek/glide/framesequence/: FrameSequence.java  FrameSequenceDrawable.java  FrameSequenceOptions.java
framesequence/src/main/java/xyz/yorek/glide/module/: FrameSequenceGlideExtension.java  FrameSequenceLibraryModule.java
framesequence/src/main/java/xyz/yorek/glide/transformation/: FrameSequenceDrawableTransformation.java
framesequence/src/main/pre480/xyz/yorek/glide/module/: FrameSequenceGlideExtension.java
gradle/: upload.gradle
gradle/wrapper/: gradle-wrapper.properties
lottie/: build.gradle
lottie/src/androidTest/java/xyz/yorek/glide/lottie/: ExampleInstrumentedTest.kt
lottie/src/main/: AndroidManifest.xml
lottie/src/main/java/xyz/yorek/glide/decoder/: LottieTransformer.java  StreamLottieDecoder.java
lottie/src/main/java/xyz/yorek/glide/module/: LottieGlideExtension.java  LottieLibraryModule.java
lottie/src/test/java/xyz/yorek/glide/lottie/: ExampleUnitTest.kt
